<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SplashActivity">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/splash_screenbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961">

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/welcome_text"
            android:textColor="@color/white"
            android:textSize="33sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/appDescription"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/app_description"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="5dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_sigin_background"
            android:text="@string/sign_txt"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_create_account_background"
            android:text="@string/create_account_txt" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>