<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.SigninScreen">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:src="@drawable/ic_vectorf_icon"
                tools:ignore="ContentDescription" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:src="@drawable/ic_vectori_icon"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="122.4dp"
            android:layout_marginEnd="24dp"
            android:text="@string/sign_head"
            android:textColor="@color/black"
            android:textSize="33sp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="202dp" />

        <TextView
            android:id="@+id/emailOrPhoneTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/email_or_phone"
            android:textColor="@color/letter_color"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="322dp" />

        <EditText
            android:id="@+id/emailOrPhoneInput"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/input_bar"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.513" />

        <TextView
            android:id="@+id/passwordTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/letter_color"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="322dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="380dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/input_bar"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/letter_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.513">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:textAlignment="gravity"
                android:ems="5"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/RememberBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:buttonTint="@color/purple"
            android:text="@string/remember_me"
            android:textColor="@color/letter_color" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="380dp"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_sigin_background"
            android:backgroundTint="#6D645FFD"
            android:text="@string/sign_txt"
            android:textSize="22sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/forgot_pass_txt"
            android:layout_width="380dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/purple"
            android:textSize="16sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dont_have_account_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="106.5dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_account"
                android:textColor="@color/dont_have_account"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/signup_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>